--- a/index.css
+++ b/index.css
@@ -4,10 +4,60 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
+
+  font-family: "Poppins";
 }
 
 input {
   border: none;
 
   color: #fff;
+}
+
+.wrapper {
+  width: 1240px;
+  margin: 0 auto;
+}
+
+.footer {
+  background-color: #fbedcd;
+
+  .footer-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    border-bottom: 1px solid #4a1d1f;
+    padding: 81px 152px 43px;
+
+    span {
+      font-size: 30px;
+      letter-spacing: 5px;
+      font-weight: 400;
+      color: #4a1d1f;
+    }
+
+    ul {
+      display: flex;
+      gap: 48px;
+    }
+  }
+
+  .footer-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 48px 152px 139px;
+
+    .footer-info-imgs {
+      display: flex;
+      gap: 34px;
+
+      img {
+        width: 24px;
+        height: 24px;
+      }
+    }
+  }
 }
