--- a/index.css
+++ b/index.css
@@ -12,6 +12,16 @@ header {
   padding: 20px;
 }
 
+button {
+  background: inherit;
+  border: none;
+  box-shadow: none;
+  border-radius: 0;
+  padding: 0;
+  overflow: visible;
+  cursor: pointer;
+}
+
 .header-inner span:nth-child(1) {
   font-size: 1.75rem;
   letter-spacing: 0.2rem;
@@ -71,6 +81,167 @@ input {
   margin: 0 auto;
 }
 
+.main3-container {
+  margin: 73px 0;
+
+  .wrapper {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 228px;
+
+    .article {
+      display: flex;
+      align-items: flex-start;
+      gap: 44px;
+
+      .content {
+        h3 {
+          width: 79%;
+          margin-bottom: 15px;
+
+          font-size: 44px;
+        }
+
+        article {
+          margin-bottom: 40px;
+
+          line-height: 40px;
+          font-size: 20px;
+        }
+
+        button {
+          display: flex;
+          align-items: center;
+
+          font-size: 20px;
+
+          img {
+            margin-left: 13px;
+          }
+        }
+      }
+
+      .content-img {
+        border-radius: 47px;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+      }
+    }
+  }
+}
+
+.main4-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #fbedcd;
+  padding: 73px 0;
+
+  h1 {
+    margin-bottom: 31px;
+
+    font-size: 36px;
+  }
+
+  p {
+    width: 760px;
+    margin-bottom: 43px;
+
+    text-align: center;
+    font-size: 20px;
+  }
+
+  button {
+    background-color: #4a1d1f;
+    padding: 14px 28px;
+    border-radius: 6px;
+
+    color: #f0fdf4;
+    font-size: 18px;
+  }
+}
+
+.main5-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin: 88px 0;
+
+  .wrapper {
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .quotes {
+      width: fit-content;
+      background-color: #fbedcd;
+      padding: 2px 8px;
+      border-radius: 36px;
+      margin-bottom: 16px;
+
+      font-size: 12px;
+      text-align: center;
+    }
+
+    .left-quotes {
+      z-index: -1;
+      position: absolute;
+      top: 12px;
+      left: 85px;
+    }
+
+    .right-quotes {
+      z-index: -1;
+      position: absolute;
+      top: 172px;
+      right: 85px;
+      transform: rotate(180deg);
+    }
+
+    h1 {
+      margin: 0 100px 64px;
+
+      font-size: 48px;
+      text-align: center;
+    }
+
+    .name {
+      margin: 24px 0 8px;
+
+      font-size: 24px;
+      font-weight: 500;
+    }
+
+    .position {
+      margin-bottom: 32px;
+
+      font-size: 18px;
+      color: #272727;
+    }
+
+    .dots {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 12px;
+
+      span {
+        background-color: #fbedcd;
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+
+        &#dot {
+          background-color: #4a1d1f;
+        }
+      }
+    }
+  }
+}
+
 .footer {
   background-color: #fbedcd;
 
@@ -85,7 +256,7 @@ input {
     span {
       font-size: 30px;
       letter-spacing: 5px;
-      font-weight: 400;
+      font-weight: 500;
       color: #4a1d1f;
     }
 
