--- a/index.css
+++ b/index.css
@@ -8,8 +8,15 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+  position: relative;
+}
+
 header {
-  padding: 20px;
+  padding: 10px 20px;
+  background: #fff;
+  border-bottom: 1px solid #cecece;
 }
 
 .header-inner span:nth-child(1) {
@@ -69,6 +76,135 @@ input {
 .wrapper {
   width: 1240px;
   margin: 0 auto;
+}
+
+.main1-container {
+  position: relative;
+  padding-bottom: 160px;
+  h1 {
+    font-size: 2.5rem;
+  }
+  .hero-image {
+    max-width: 680px;
+  }
+  .hero-content {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    p,
+    a {
+      font-size: 1.25rem;
+      max-width: 440px;
+    }
+  }
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 40px;
+  }
+  .hero-call {
+    display: flex;
+    gap: 20px;
+    a {
+      padding: 8px 24px;
+      background: #4a1d1f;
+      color: #fff;
+      border-radius: 5px;
+      font-weight: 300;
+      border: 2px solid #4a1d1f;
+    }
+    a:nth-child(2) {
+      background: none;
+      font-weight: 400;
+      color: #4a1d1f;
+    }
+  }
+  .hero-cakes {
+    position: absolute;
+    right: -60px;
+    bottom: 100px;
+    display: flex;
+    gap: 20px;
+    background: rgba(255, 255, 255, 0.7);
+    padding: 30px 30px 30px 60px;
+    border-radius: 200px 0 0 200px;
+  }
+  .hero-cakes-images {
+    display: flex;
+    gap: 10px;
+  }
+  .hero-cakes-images img {
+    border-radius: 18px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  }
+  .hero-navigation {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+  }
+}
+
+.gradient {
+  width: 900px;
+  height: 900px;
+  position: absolute;
+  background: #fbedcd;
+  filter: blur(120px);
+  z-index: -1;
+  right: -100px;
+  top: 0;
+}
+
+.main2-container {
+  padding: 60px 20px 120px 20px;
+  .products-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    h2 {
+      font-size: 2.5rem;
+    }
+    span {
+      display: block;
+      height: 110px;
+      width: 1px;
+      background: #4a1d1f;
+    }
+    p {
+      max-width: 620px;
+      font-size: 1.25rem;
+    }
+  }
+  .products-list {
+    display: flex;
+    gap: 70px;
+    padding: 100px 0 60px 0;
+  }
+  .product {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    h3 {
+      font-weight: 500;
+    }
+  }
+  .product > img {
+    border-radius: 33px;
+    box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.15);
+  }
+  .call-to-action {
+    padding: 8px 24px;
+    color: #fff;
+    border-radius: 5px;
+    border: 2px solid #4a1d1f;
+    background: none;
+    font-weight: 500;
+    color: #4a1d1f;
+    display: block;
+    max-width: fit-content;
+    margin: 0 auto;
+  }
 }
 
 .footer {
